tests/source/floats/valid/floating_expressions/simple/simple.c
/* A simple arithmetic test case */
int main(void) {
    float x = 2.0;
    return (x * 2.0 == 4.0);
}