tests/source/floats/invalid/lex/another_bad_constant.c
int main(void) {
    // fF is not valid
    return 1.fF;
}
